--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,9 @@
     "require" : {
         "agpfontawesome/components": "*",             
         "agpfontawesome/icons": "*"
+    },
+    "scripts": {
+        "post-update-cmd": ["echo [WARNING] Delete all .git dirs", "rm -rf vendor/**/**/.git"],
+        "post-install-cmd": ["echo [WARNING] Delete all .git dirs", "rm -rf vendor/**/**/.git"]
     }
 }
