--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
             "type": "package",
             "package": {
                 "name": "agpfontawesome/icons",
-                "version": "4.4.0",
+                "version": "4.5.0",
                 "dist": {
                     "url": "https://github.com/FortAwesome/Font-Awesome/raw/master/src/icons.yml",
                     "type": "file",
@@ -14,8 +14,8 @@
         }
     ],
     "require" : {
-        "components/font-awesome": "dev-master",             
-        "agpfontawesome/icons": "4.4.0",
+        "components/font-awesome": "*",             
+        "agpfontawesome/icons": "4.5.0",
         "mustangostang/spyc": "dev-master",
         "oyejorge/less.php": "~1.5"
     },
