--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "type": "package",
             "package": {
                 "name": "agpfontawesome/src",
-                "version": "4.6.1",
+                "version": "4.6.3",
                 "source": {
                     "url": "https://github.com/FortAwesome/Font-Awesome",
                     "type": "git",
@@ -29,10 +29,17 @@
         }
     },    
     "scripts": {
-        "post-autoload-dump": [
+        "post-install-cmd": [
             "rm -rf vendor/**/**/.git", 
             "grep -rl 'Agp' ./vendor/ | xargs sed -i 's/Agp\\\\Core/Fac\\\\Core/g'",
-            "grep -rl 'Agp' ./vendor/ | xargs sed -i 's/Agp\\\\\\\\Core/Fac\\\\\\\\Core/g'",            
+            "grep -rl 'Agp' ./vendor/ | xargs sed -i 's/Agp\\\\\\\\Core/Fac\\\\\\\\Core/g'"
+        ],
+        "post-update-cmd": [
+            "rm -rf vendor/**/**/.git", 
+            "grep -rl 'Agp' ./vendor/ | xargs sed -i 's/Agp\\\\Core/Fac\\\\Core/g'",
+            "grep -rl 'Agp' ./vendor/ | xargs sed -i 's/Agp\\\\\\\\Core/Fac\\\\\\\\Core/g'"
+        ],
+        "post-autoload-dump": [
             "if test -d 'vendor/agpfontawesome/css'; then rm -rf vendor/agpfontawesome/css; fi",            
             "if test -d 'vendor/agpfontawesome/fonts'; then rm -rf vendor/agpfontawesome/fonts; fi",            
             "mv vendor/agpfontawesome/src/css vendor/agpfontawesome/css",
@@ -40,6 +47,6 @@
             "mv vendor/agpfontawesome/src/src/icons.yml vendor/agpfontawesome/icons.yml",
             "mv vendor/agpfontawesome/src/component.json vendor/agpfontawesome/component.json",
             "rm -r vendor/agpfontawesome/src"
-        ]
+        ]        
     }
 }
